--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 <body>
 <h2>ASQ SI Screening</h2>
 <ol>
-<li>In the past few weeks, have you wished you were dead?</li>
+<input type="checkbox" id="asq1" name="asq1" value="Question1">
+<label for="asq1"><li>In the past few weeks, have you wished you were dead?</li></label>
+
 <li>In the past few weeks, have you felt that you or your family would be better off if you were dead?</li>
 <li>In the past week, have you been having thoughts about killing yourself?</li>
 <li>Have you ever tried to kill yourself? If yes, how? when?</li>
@@ -22,6 +24,7 @@
 <h2>Appt Searches</h2>
 <ul>
 <li>Advise of appropriate TAT</li>
-<li>Advise that our team is finding appt availability, due to HIPAA privacy practices we are not able to schedule the appt. You will need to call the counselor ASAP to provide your info and to let them know you'd like to schedule the appt</li>
+<li>Advise that our team is finding appt availability, due to HIPAA privacy practices we are not able to schedule the appt.</li>
+  <li>You will need to call the counselor ASAP to provide your info and to let them know you'd like to schedule the appt</li>
 </ul>
 </body>
