--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 <ol>
 <input type="checkbox" id="asq1" name="asq1" value="Question1">
 <label for="asq1"><li>In the past few weeks, have you wished you were dead?</li></label>
-
-<li>In the past few weeks, have you felt that you or your family would be better off if you were dead?</li>
-<li>In the past week, have you been having thoughts about killing yourself?</li>
-<li>Have you ever tried to kill yourself? If yes, how? when?</li>
+<input type="checkbox" id="asq2" name="asq2" value="Question2">
+<label for="asq2"><li>In the past few weeks, have you felt that you or your family would be better off if you were dead?</li></label>
+<input type="checkbox" id="asq3" name="asq3" value="Question3"> 
+<label for="asq3"><li>In the past week, have you been having thoughts about killing yourself?</li></label>
+<input type="checkbox" id="asq4" name="asq4" value="Question4">
+<label for="asq4"><li>Have you ever tried to kill yourself? If yes, how? when?</li>
 <h3>If yes to any of the previous questions, ask: </h3>
 <li>Are you having thoughts of killing yourself right now? If yes, please describe: </li>
 </ol>
