--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <input type="checkbox" id="asq4" name="asq4" value="Question4">
 <label for="asq4"><li>Have you ever tried to kill yourself? If yes, how? when?</li>
 <h3>If yes to any of the previous questions, ask: </h3>
-<li>Are you having thoughts of killing yourself right now? If yes, please describe: </li>
+<input type="checkbox" id="asq5" name="asq5" value="Question5">
+<label for="asq5"><li>Are you having thoughts of killing yourself right now? If yes, please describe: </li></label>
 </ol>
 <h2>Benefits</h2>
 <ul>
