--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 <label for="asq5"><li>Are you having thoughts of killing yourself right now? If yes, please describe: </li></label>
 </ol>
 <h2>SDOH<h2>
-Ask all SDOH questions on accts with SDOH pop-up: YHP, MSK, DG, Krog, Mich
-All others without pop up: can ask if they need help with daily needs like food, shelter, paying bills
-<br>
+<ul><li>Ask all SDOH questions on accts with SDOH pop-up: YHP, MSK, DG, Krog, Mich</li>
+<li>All others without pop up: can ask if they need help with daily needs like food, shelter, paying bills</li>
+</ul>
 <h2>Benefits</h2>
 <ul>
 <li>While we finish up, would you like me to review your other benefits with you like financial wellness and legal?</li>
