--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h3>If yes to any of the previous questions, ask: </h3>
 <input type="checkbox" id="asq5" name="asq5" value="Question5"><label for="asq5"><li>Are you having thoughts of killing yourself right now? If yes, please describe: </li></label>
 </ol>
-<h2>SDOH<h2>
+<h2>SDOH</h2>
 <ul><li>Ask all SDOH questions on accts with SDOH pop-up: YHP, MSK, DG, Krog, Mich</li>
 <li>All others without pop up: can ask if they need help with daily needs like food, shelter, paying bills</li>
 </ul>
